# crypto-exchange-platform

./: CMakeLists.txt  README.md
include/: FileReader.h  MainApp.h  OrderBook.h  OrderBookEntry.h  Wallet.h
src/: FileReader.cpp  MainApp.cpp  OrderBook.cpp  OrderBookEntry.cpp  Wallet.cpp  main.cpp
tests/: test_main.cpp
